// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button default button renders correctly 1`] = `
<button
  className="default md"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;

exports[`The Button grey button renders correctly 1`] = `
<button
  className="grey md"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;

exports[`The Button transparent button renders correctly 1`] = `
<button
  className="transparent md"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;
